--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite: ^2.2.8+4
+  path_provider: ^2.0.15
+  awesome_dialog: ^3.0.2
 
 dev_dependencies:
   flutter_test:
