--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   sqflite: ^2.2.8+4
   path_provider: ^2.0.15
   awesome_dialog: ^3.0.2
+  path: ^1.8.3
+  flutter_exit_app: ^1.1.2
 
 dev_dependencies:
   flutter_test:
